--- a/index.css
+++ b/index.css
@@ -35,28 +35,288 @@
 }
 
 
-html,body,div,p,h1,header,nav,aside,footer,a,ul,li,input,form {
+html,body,div,p,h1,header,nav,aside,footer,a,ul,li,input,form, h1, h2 {
     margin:0;padding:0;outline:0;border:0;
 }
 
-body,p {
+body {
     font-family: 'Gilroy', sans-serif;
     font-weight: 400;
+    position: relative;
+    color: #333333;
 }
 
-/*a {*/
-/*    text-decoration: none;*/
-/*    color: inherit;*/
-/*    display: block;*/
-/*}*/
+header, main, footer {
+    padding: 0 4% 0 4%;
+}
 
-/*header {*/
-/*    display: flex;*/
-/*    justify-content: space-between;*/
-/*    align-items: center;*/
-/*    padding: 0 6%;*/
-/*    min-height: 121px;*/
-/*    background-color: white;*/
-/*    column-gap: 20px;*/
-/*    box-shadow: 0px 4px 37px rgba(0, 0, 0, 0.05);*/
-/*}*/
+a {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
+
+header {
+    height: 72px;
+    box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.05);
+    position: sticky;
+    background-color: white;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 40px;
+    flex-wrap: wrap;
+    row-gap: 5px;
+}
+nav a {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 32px;
+
+}
+nav a:hover, nav a.active {
+    color: rgba(0, 102, 204, 1);
+}
+
+main {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.sec_table {
+    margin-top: 94px;
+}
+.sec_form, .sec_gallery {
+    margin-top: 104px;
+}
+
+.breadcrumbs {
+    margin-top: 83px;
+    color: #52575F;
+    font-size: 14px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    line-height: 16px;
+}
+.breadcrumb:hover {
+    color: rgba(0, 102, 204, 1);
+}
+
+h1 {
+    margin-top: 15px;
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 64px;
+    text-align: center;
+
+}
+
+h2 {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 64px;
+}
+
+section {
+    max-width: 884px;
+    width: 100%;
+}
+
+.text {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 32px;
+    margin-bottom: 55px;
+    margin-top: 9px;
+}
+
+table {
+    width: 100%;
+    margin:0;
+    padding:0;
+    border-collapse: collapse;
+    border-spacing: 0;
+    color: #1D1D1F;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+thead {
+    background-color: #F5F5F7;
+    font-weight: 600;
+}
+
+
+table th, table td {
+    text-align: left;
+    width: 100%;
+}
+
+
+table tr {
+    flex-direction: row;
+    justify-content: space-between;
+    display: flex;
+    padding: 0 31px 0 31px;
+    align-items: center;
+    height: 56px;
+    font-weight: 400;
+    border-top: 1px solid #E1E1E1;
+    border-bottom: 1px solid #E1E1E1;
+    column-gap: 10px;
+}
+
+.price_column {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.basket_button {
+    width: 98px;
+    height: 32px;
+    background-color: rgba(0, 102, 204, 0.1);
+    border-radius: 4px;
+    color: rgba(0, 102, 204, 1);
+    font-weight: 600;
+    font-family: 'Gilroy', sans-serif;
+    font-size: 14px;
+    line-height: 24px;
+    border: 0;
+}
+
+.basket_button:hover {
+    background-color: rgba(0, 102, 204, 1);
+    color: rgb(226, 239, 252);
+}
+
+
+
+
+
+/* FORM*/
+
+.sec_form {
+    margin-top: 104px;
+}
+
+.form_wrap {
+    background-color: #F5F5F7;
+    border-radius: 20px;
+    max-width: 842px;
+}
+h3 {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 40px;
+    color: #1D1D1F;
+}
+
+
+
+
+#gallery {
+    height: 1000px;
+    background-color: darkorange;
+}
+
+
+
+@media screen and (max-width: 540px) {
+
+
+    table {
+        /*border: 0;*/
+    }
+
+    table thead {
+        display: none;
+    }
+
+    table tr {
+        padding: 0;
+        margin-bottom: 16px;
+        display: block;
+        height: auto;
+    }
+
+
+
+    table td {
+
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        column-gap: 16px;
+        height: 56px;
+        text-align: left;
+        border-bottom: 1px solid #E1E1E1;
+        align-items: center;
+
+
+
+    }
+
+    table td:last-child {
+        border-bottom: 0;
+    }
+
+    table td:before {
+        background-color: #F5F5F7;
+        width: 109px;
+        min-width: 109px;
+        height: inherit;
+        content: attr(data-label);
+        float: left;
+        font-weight: 600;
+        display: flex;
+        align-items: center;
+        padding-left: 15px;
+    }
+
+    .price_column {
+        flex-direction: row;
+        width: 100%;
+        justify-content: space-between;
+    }
+}
+
+@media screen and (max-width: 375px) {
+
+    .breadcrumbs {
+        margin-top: 51px;
+    }
+
+    h1 {
+        font-size: 48px;
+        line-height: 48px;
+        margin-top: 15px;
+    }
+
+    h2 {
+        font-size: 40px;
+        line-height: 56px;
+        text-align: center;
+    }
+
+    .sec_table {
+        margin-top: 46px;
+    }
+
+    .text {
+        font-size: 16px;
+        line-height: 24px;
+        margin-top: 17px;
+        margin-bottom: 43px;
+    }
+}
